add double-brace support && tests